--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,6 +6,19 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="nav-collapse collapse">
+        <ul class="nav">
+            <li class="active"><a href="/">Home</a></li>
+            {% if g.user.is_authenticated%}
+                <li><a href="/new">New Todo</a></li>
+                <li><a href="{{ url_for('logout') }}">Logout</a></li>
+            {% endif %}
+            {% if not g.user.is_authenticated%}
+                <li><a href="{{ url_for('login') }}">Login</a></li>
+                <li><a href="{{ url_for('register') }}">Register</a></li>
+            {% endif %}
+        </ul>
+    </div>
     <div>Index</div>
 </body>
 </html>
