--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,10 +1,10 @@
 {% extends "layout.html" %}
 {% block body %}
   <form action="" method=post class="form-horizontal">
-    <h2>Sign up for FlaskLogin(Todo) Application </h2>
+    <h1>Register Student</h1>
     <div class="control-group">
         <div class="controls">
-          <input type="text" id="username" name="username" class="input-xlarge"
+          <input type="text" id="username" name="username"
             placeholder="Enter Username" value="{{ request.form.username }}"
             required>
         </div>
@@ -12,7 +12,7 @@
 
     <div class="control-group">
         <div class="controls">
-          <input type="password" id="password" name="password" class="input-xlarge"
+          <input type="password" id="password" name="password"
             placeholder="Enter Password" value="{{ request.form.password }}"
             required>
         </div>
@@ -20,7 +20,7 @@
 
     <div class="control-group">
         <div class="controls">
-          <input type="email" id="email" name="email" class="input-xlarge"
+          <input type="email" id="email" name="email"
             placeholder="Enter Email" value="{{ request.form.username }}"
             required>
         </div>
