--- a/app/templates/loginTeacher.html
+++ b/app/templates/loginTeacher.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block body %}
   <form action="" method=post>
-    <h1>Login Student </h1>
+    <h1>Login Teacher </h1>
     <div class="control-group">
         <div class="controls">
           <input type="text" id="username" name="username" class="input-xlarge"
@@ -18,7 +18,7 @@
 
     <div class="control-group">
         <div class="controls">
-          <button type="submit" class="btn btn-success">Signin</button>
+          <button type="submit" class="btn btn-success">Sign In</button>
         </div>
     </div>
   </form>
