created the frontend of student-enrolment

--- a/app/templates/register-student.html
+++ b/app/templates/register-student.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block body %}
-  <form action="" method=post class="form-horizontal">
+  <form action="" method=post >
     <h1>Register Student</h1>
     <div class="control-group">
         <div class="controls">
