--- a/app/templates/register-teacher.html
+++ b/app/templates/register-teacher.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block body %}
-  <form action="" method=post class="form-horizontal">
+  <form action="" method=post >
     <h1>Register Teacher</h1>
     <div class="control-group">
         <div class="controls">
