--- a/app/templates/login-student.html
+++ b/app/templates/login-student.html
@@ -2,22 +2,22 @@
 {% block body %}
   <form action="" method=post>
     <h1>Login Student </h1>
-    <div class="control-group">
-        <div class="controls">
-          <input type="text" id="username" name="username" class="input-xlarge"
+    <div>
+        <div>
+          <input autofocus type="text" id="username" name="username" class="input-xlarge"
             placeholder="Enter Username" required>
         </div>
     </div>
 
-    <div class="control-group">
-        <div class="controls">
+    <div>
+        <div>
           <input type="password" id="password" name="password" class="input-xlarge"
             placeholder="Enter Password" required>
         </div>
     </div>
 
-    <div class="control-group">
-        <div class="controls">
+    <div>
+        <div>
           <button type="submit" class="btn btn-success">Signin</button>
         </div>
     </div>
