--- a/app/templates/login-teacher.html
+++ b/app/templates/login-teacher.html
@@ -1,25 +1,29 @@
 {% extends "layout.html" %}
 {% block body %}
-  <form action="" method=post>
-    <h1>Login Teacher </h1>
-    <div class="control-group">
-        <div class="controls">
-          <input type="text" id="username" name="username" class="input-xlarge"
-            placeholder="Enter Username" required>
+<article>
+  <section>
+      <h1>Login Teacher </h1>
+      <form action="" method=post>
+        <div>
+            <div>
+              <input autofocus type="text" id="username" name="username" class="input-xlarge"
+                placeholder="Enter Username" required>
+            </div>
         </div>
-    </div>
 
-    <div class="control-group">
-        <div class="controls">
-          <input type="password" id="password" name="password" class="input-xlarge"
-            placeholder="Enter Password" required>
+        <div>
+            <div>
+              <input type="password" id="password" name="password" class="input-xlarge"
+                placeholder="Enter Password" required>
+            </div>
         </div>
-    </div>
 
-    <div class="control-group">
-        <div class="controls">
-          <button type="submit" class="btn btn-success">Sign In</button>
+        <div>
+            <div>
+              <button type="submit" class="btn btn-success">Sign In</button>
+            </div>
         </div>
-    </div>
-  </form>
+      </form>
+  </section>
+</article>
 {% endblock %}
